# time_walk_server

./: CMakeLists.txt  README.md
android_app/TimeWalk/app/src/main/: AndroidManifest.xml
android_app/TimeWalk/app/src/main/java/project/chronos/timewalk/: Client.java  MainActivity.java
android_app/TimeWalk3/app/src/main/: AndroidManifest.xml
android_app/TimeWalk3/app/src/main/java/project/chronos/timewalk/: Client.java  Data.java  GPSCoord.java  HomeScreenActivity.java  LandmarkActivity.java  SearchActivity.java  TransferCode.java
android_app/TimeWalk3/app/src/main/res/layout/: activity_home_screen.xml  activity_landmark.xml  activity_search.xml
android_app/TimeWalk4/app/: build.gradle
android_app/TimeWalk4/app/src/main/: AndroidManifest.xml
android_app/TimeWalk4/app/src/main/java/project/chronos/timewalk/: Client.java  Data.java  GPSCoord.java  HomeScreen.java  LandmarkScreen.java  ResultCode.java  SearchScreen.java  Utility.java
android_app/TimeWalk4/app/src/main/res/layout/: activity_home_screen.xml  activity_landmark_screen.xml  activity_search_screen.xml
android_app/TimeWalk4/app/src/main/res/values/: colors.xml  strings.xml
android_app/TimeWalk5/app/: build.gradle  proguard-rules.pro
android_app/TimeWalk5/app/src/main/: AndroidManifest.xml
android_app/TimeWalk5/app/src/main/java/project/chronos/timewalk/: Client.java  Data.java  DiscoverScreen.java  GPSCoord.java  (+6 more)
android_app/TimeWalk5/app/src/main/res/drawable/: button_border.xml
android_app/TimeWalk5/app/src/main/res/layout/: activity_discover_screen.xml  activity_explore.xml  activity_explore_screen.xml  activity_home_screen.xml  activity_journeys_screen.xml  activity_landmark_screen.xml  activity_single_image_screen.xml
android_app/TimeWalk5/app/src/main/res/values/: colors.xml  strings.xml
android_app/TimeWalk5/gradle/wrapper/: gradle-wrapper.properties
archives/time_walk_images/Brisbane/: gps
archives/time_walk_images/Brisbane/Brisbane_City_Hall/: gps  main_photo
archives/time_walk_images/Brisbane/Brisbane_City_Hall/1930_02_07/: image
archives/time_walk_images/Brisbane/Brisbane_City_Hall/1931_01_02/: image  text
archives/time_walk_images/Brisbane/Brisbane_City_Hall/1932_00_00/: image
archives/time_walk_images/Brisbane/Brisbane_City_Hall/1937_11_27/: image  text
archives/time_walk_images/Brisbane/Central_Railway_Station/: gps  main_photo
archives/time_walk_images/Brisbane/Central_Railway_Station/1890_11_14/: image  text
archives/time_walk_images/Brisbane/Charlotte_Street/: gps  main_photo
archives/time_walk_images/Brisbane/Charlotte_Street/1864_03_00/: image  text
archives/time_walk_images/Brisbane/Charlotte_Street/1893_02_00/: image  text
archives/time_walk_images/Brisbane/Queen_Street/: gps  main_photo
archives/time_walk_images/Brisbane/Queen_Street/1875_00_00/: image  text
archives/time_walk_images/Brisbane/Queen_Street/1880_00_00/: image  text
archives/time_walk_images/Brisbane/Queen_Street/1930_10_00/: image
archives/time_walk_images/Brisbane/Queen_Street/1930_10_01/: image  text
archives/time_walk_images/Brisbane/Roma_Street_Station/: gps  main_photo
archives/time_walk_images/Brisbane/Roma_Street_Station/1898_12_03/: image  text
archives/time_walk_images/Brisbane/Victoria_Bridge/: gps  main_photo
archives/time_walk_images/Brisbane/Victoria_Bridge/1874_06_20/: image  text
archives/time_walk_images/Brisbane/Victoria_Bridge/1893_00_00/: image  text
archives/time_walk_images/Brisbane/Victoria_Bridge/1893_02_11/: image  text
archives/time_walk_images/Brisbane/Victoria_Bridge/1930_10_00/: image
archives/time_walk_images/Brisbane/Windmill/: gps  main_photo
archives/time_walk_images/Brisbane/Windmill/1840_08_21/: image  text
archives/time_walk_images/Brisbane/Windmill/1933_12_00/: image  text
server/: CMakeLists.txt
server/src/: cache.hpp  connection.cpp  connection.hpp  interface.hpp  log.hpp  main.cpp  processor.cpp  processor.hpp  server.cpp  server.hpp  threads.cpp  threads.hpp
server/src/apps/server/: a.out  main.cpp  server.cpp  server.hpp
server/src/connection/: access_connection.hpp  client_connection.hpp  connection.cpp  connection.hpp
src/: connection.hpp  log.hpp  request.hpp  server.cpp
