#	SETUP
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(time_walk_server)

#	COMPILER FLAGS

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \
	-std=c++11 -O3")

#	SOURCE FILES

FILE(GLOB source_files "src/*.cpp")

#	BINARY OUTPUT

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")

#	LINK BOOST

SET(Boost_USE_STATIC_LIBS ON)
SET(Boost_USE_MUTITHREADED ON)
SET(Boost_USE_STATIC_RUNTIME ON)

FIND_PACKAGE(Boost 1.62.0 COMPONENTS system)

#   CREATE BINARY

IF (Boost_FOUND)
	INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
	ADD_EXECUTABLE(time_walk_server ${source_files})
	TARGET_LINK_LIBRARIES(time_walk_server ${Boost_LIBRARIES})
ENDIF()