#	SETUP
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(time_walk_server)

#	COMPILER FLAGS

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \
	-std=c++11 -O3")

#	SOURCE FILES

FILE(GLOB source_files "src/*.cpp")

#	BINARY OUTPUT

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")

#	FIND PACKAGES

FIND_PACKAGE(Boost 1.60 REQUIRED COMPONENTS system thread filesystem)
FIND_PACKAGE(Threads REQUIRED)

#	INCLUDE DIRECTORIES

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

#   CREATE BINARY

ADD_EXECUTABLE(time_walk_server ${source_files})

#	LINK LIBRARIES

TARGET_LINK_LIBRARIES(time_walk_server ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(time_walk_server ${CMAKE_THREAD_LIBS_INIT})
