#	SETUP
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(time_walk_server)

#	C++ STANDARD

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED)

#	COMPILER SETUP

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \
	-O3 \
	-fno-rtti \
	") ## REPLACE WITH FOLLOWING FOR SOLARIS
#	-pthreads")


#	FIND THREADS AND BOOST

FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(Boost COMPONENTS system thread filesystem REQUIRED)

#	INCLUDE LIBRARIES

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

#	FIND SOURCE FILES

FILE(GLOB SOURCE_FILES "src/*.cpp")

#	BINARY OUTPUT

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")

#	MAKE BINARY

ADD_EXECUTABLE(time_walk_server ${SOURCE_FILES})

#	LINK LIBRARIES

TARGET_LINK_LIBRARIES(time_walk_server ${CMAKE_THREAD_LIBS_INIT})
TARGET_LINK_LIBRARIES(time_walk_server ${Boost_LIBRARIES})